# hades

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.txt  README.md  build-debug-vs2015.bat  build-install-release.bat  build.bat  build.sh  build32.bat  build64.bat  clean.bat  clean.sh  cmake.txt  install.bat
app/: CMakeLists.txt
app/source/: capabilities.cpp
build-scripts/: build-essentials.sh  build-install-dependencies.bat  build-install-example.bat
example/: CMakeLists.txt
example/source/: CMakeLists.txt
examples/: CMakeLists.txt
examples/basic_app/: CMakeLists.txt  main.cpp
game/basic_app/: game.yaml
game/dev/: game.yaml  new_level.lvl
game/example/: game.yaml
game/objects/: game.yaml  mod.yaml
game/ortho_terrain/: game.yaml
game/snake/: mod.yaml
game/terrain/: game.yaml  mod.yaml
game/test/: game.txt  game.yaml  testmod.txt
game/tiles/: game.yaml  gui_layouts.yaml  mod.yaml
hades/: CMakeLists.txt
hades/include/Gui/: Gui.hpp  SimpleHorizontalLayout.hpp  SimpleVerticalLayout.hpp
hades/include/Hades/: Animation.hpp  App.hpp  Bind.hpp  Collision.hpp  Console.hpp  ConsoleView.hpp  Curves.hpp  Data.hpp  Data.inl  DataManager.hpp  Debug.hpp  Events.hpp  ExportedCurves.hpp  GameInstance.hpp  GameInterface.hpp  GameRenderer.hpp  GameSystem.hpp  GridArea.hpp  GuiLoaders.hpp  Hades.hpp  Input.hpp  LimitedDraw.hpp  Logging.hpp  Main.hpp  Properties.hpp  QuadMap.hpp  RenderInstance.hpp  RenderInterface.hpp  ResourceBag.hpp  ResourceManager.hpp  Server.hpp  SpriteBatch.hpp  StandardPaths.hpp  State.hpp  StateManager.hpp  Stitches.hpp  System.hpp  TimerManager.hpp  Types.hpp  UniqueId.hpp  (+25 more)
hades/include/Hades/detail/: Console.inl  DataManager.inl  QuadMap.inl  ResourceManager.inl  Types.inl  data_manager.inl  data_system.inl  systems.inl  type_erasure.inl
hades/include/Hades/resource/: console_resources.hpp  fonts.hpp  texture.hpp
hades/include/Objects/: Objects.hpp  editor.hpp  resources.hpp
hades/include/OrthoTerrain/: editor.hpp  generator.hpp  resources.hpp  serialise.hpp  terrain.hpp  utility.hpp
hades/include/Tiles/: editor.hpp  editor.inl  generator.hpp  resources.hpp  serialise.hpp  tiles.hpp
hades/include/Tiles/resource/: error_tile.hpp
hades/include/hades/: App.hpp  Main.hpp  StateManager.hpp  simple_resources.hpp  yaml_parser.hpp
hades/include/hades/detail/: Console.inl  data_system.inl
hades/include/hades/resource/: fonts.hpp
hades/source/: Animation.cpp  App.cpp  Bind.cpp  CMakeLists.txt  Collision.cpp  Console.cpp  ConsoleView.cpp  Curves.cpp  Data.cpp  DataManager.cpp  Debug.cpp  ExportedCurves.cpp  GameInstance.cpp  GameInterface.cpp  GameRenderer.cpp  GameSystem.cpp  GridArea.cpp  GuiLoaders.cpp  Input.cpp  Logging.cpp  Properties.cpp  RenderInstance.cpp  RenderInterface.cpp  ResourceBag.cpp  ResourceManager.cpp  ScriptManager.cpp  Server.cpp  SpriteBatch.cpp  StandardPaths.cpp  StandardPathsLinux.cpp  StandardPathsWindows.cpp  State.cpp  StateManager.cpp  System.cpp  TimerManager.cpp  Types.cpp  archive.cpp  common-input.cpp  console_variables.cpp  data_manager.cpp  (+13 more)
hades/source/Gui/: Gui.cpp  SimpleHorizontalLayout.cpp  SimpleVerticalLayout.cpp
hades/source/Objects/: Objects.cpp  editor.cpp  resources.cpp
hades/source/OrthoTerrain/: editor.cpp  generator.cpp  resources.cpp  serialise.cpp  terrain.cpp  utility.cpp
hades/source/Tiles/: editor.cpp  generator.cpp  resources.cpp  serialise.cpp  tiles.cpp
libs/: CMakeLists.txt
libs/basic/: CMakeLists.txt
libs/basic/source/: CMakeLists.txt  archive.cpp  archive_streams.cpp  colour.cpp  console_variables.cpp  curve_extra.cpp  curve_types.cpp  data.cpp  files.cpp  input.cpp  logging.cpp  parser.cpp  properties.cpp  standard_paths.cpp  standard_paths_linux.cpp  standard_paths_windows.cpp  system.cpp  terrain.cpp  tiles.cpp  timers.cpp  writer.cpp
libs/core/: CMakeLists.txt
libs/core/source/: CMakeLists.txt  animation.cpp  archive.cpp  archive_streams.cpp  background.cpp  camera.cpp  console_functions.cpp  core_curves.cpp  core_resources.cpp  debug.cpp  draw_clamp.cpp  draw_tools.cpp  export_curves.cpp  files.cpp  font.cpp  game_api.cpp  game_instance.cpp  game_state.cpp  game_system.cpp  grid.cpp  gui.cpp  level.cpp  level_curve_data.cpp  level_editor.cpp  level_editor_grid.cpp  level_editor_level_properties.cpp  level_editor_objects.cpp  level_editor_regions.cpp  level_editor_terrain.cpp  level_editor_tiles.cpp  level_interface.cpp  level_scripts.cpp  mission.cpp  mission_editor.cpp  mouse_input.cpp  objects.cpp  render_instance.cpp  render_interface.cpp  save_load_api.cpp  sf_input.cpp  (+12 more)
libs/core/source/debug/: console_overlay.cpp  object_overlay.cpp
libs/util/: CMakeLists.txt
libs/util/include/hades/: any_map.hpp  async.hpp  collision_grid.hpp  curve.hpp  for_each_tuple.hpp  line_math.hpp  math.hpp  parallel_jobs.hpp  poly_math.hpp  random.hpp  rectangle_math.hpp  shared_any_map.hpp  shared_guard.hpp  shared_map.hpp  spinlock.hpp  string.hpp  strong_typedef.hpp  table.hpp  time.hpp  transaction.hpp  transactional.hpp  transactional_map.hpp  triangle_math.hpp  tuple.hpp  type_erasure.hpp  types.hpp  uniqueid.hpp  utility.hpp  value_guard.hpp  vector_math.hpp  zip.hpp
libs/util/include/hades/detail/: any_map.inl  collision_grid.inl  for_each_tuple.inl  line_math.inl  math.inl  parallel_jobs.inl  poly_math.inl  random.inl  rectangle_math.inl  shared_any_map.inl  shared_map.inl  string.inl  table.inl  transaction.inl  transactional_map.inl  triangle_math.inl  tuple.inl  type_erasure.inl  utility.inl  vector_math.inl  zip.inl
libs/util/source/: CMakeLists.txt  async.cpp  parallel_jobs.cpp  random.cpp  string.cpp  time.cpp  transaction.cpp  types.cpp  utility.cpp
test/: CMakeLists.txt  install_manifest.txt
test/include/: ConsoleTestState.hpp  Snake.hpp  gui_state.hpp  input_names.hpp  simple_instance_state.cpp  simple_instance_state.hpp  snake_loader.hpp
test/source/: CMakeLists.txt  ConsoleTestState.cpp  ExampleJob.cpp  Snake.cpp  gui_state.cpp  imgui.ini  input_names.cpp  main.cpp  new_level.lvl  simple_instance_state.cpp  snake_loader.cpp
(+153 files in other folders)
